<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7"
    tools:context=".SmartHome4Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="bottom"
        android:background="@drawable/header_br"
        android:padding="12dp"
        >
        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dadhboard"
            android:textColor="#fafafa"
            android:textSize="30sp"
            />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Welcome"
            android:textColor="#fafafa"
            android:textSize="25sp" />


    </LinearLayout>

    <!--creating the menu grid button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:orientation="vertical"
        android:weightSum="2"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="2"
            android:padding="16dp"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardElevation="2dp"
                app:cardCornerRadius="8dp"
                >

                <LinearLayout
                    android:layout_width="181dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_twotone_king_bed_24" />

                    <Button
                        android:id="@+id/btn1"
                        android:layout_width="167dp"
                        android:layout_height="wrap_content"
                        android:text="@string/bedroom"
                        android:textAlignment="center" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardElevation="2dp"
                app:cardCornerRadius="8dp"
                >

                <LinearLayout
                    android:layout_width="198dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_kitchen_24" />

                    <Button
                        android:id="@+id/btn2"
                        android:layout_width="185dp"
                        android:layout_height="wrap_content"
                        android:text="@string/kitchen"
                        android:textAlignment="center" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="2"
            android:padding="16dp"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardElevation="2dp"
                app:cardCornerRadius="8dp"
                >

                <LinearLayout
                    android:layout_width="181dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_bathtub_24" />

                    <Button
                        android:id="@+id/btn3"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:text="@string/bathroom"
                        android:textAlignment="center"

                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardElevation="2dp"
                app:cardCornerRadius="8dp"
                >

                <LinearLayout
                    android:layout_width="195dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_weekend_24" />

                    <Button
                        android:id="@+id/btn4"
                        android:layout_width="181dp"
                        android:layout_height="wrap_content"
                        android:text="@string/livingroom"
                        android:textAlignment="center" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>





    </LinearLayout>

</LinearLayout>