<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LivingroomActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="@string/livingroom"
                app:titleMarginStart="20dp" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:padding="10dp"
                android:src="@drawable/ic_living" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="307dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="182dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/t1"
                    android:layout_width="320dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:text="@string/gaz" />

                <Switch
                    android:id="@+id/switch4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:padding="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/t2"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:text="@string/et_light" />

                <Switch
                    android:id="@+id/switch3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:padding="20dp"
                    android:textColor="@color/gris" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/t3"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:text="@string/temperature" />

                <Switch
                    android:id="@+id/switch5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:padding="20dp"
                    android:textColor="@color/gris" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_5"
        android:layout_marginTop="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>
    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

</androidx.constraintlayout.widget.ConstraintLayout>